# grokking-exp

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
configs/: base.yaml
docs/: GPU_GUIDE.md
notebooks/: analysis.py
results/algorithm_identification/: B_center_a0p3_lam0p1_probe_top10.json  B_checkpoint_strong_validation_report.md  B_fail_negative_a0p1_lam3p162278_probe_dc_top10.json  B_fail_negative_a0p1_lam3p162278_probe_summary.csv  B_fail_negative_a0p1_lam3p162278_probe_top10.json  B_grok_boundary_a0p4_lam0p01_probe_top10.json  B_grok_boundary_a0p4_lam0p01_probe_top15.json  B_grok_boundary_a0p4_lam0p01_probe_top20.json  B_grok_boundary_a0p4_lam0p01_probe_top30.json  B_grok_boundary_a0p4_lam0p01_probe_top56.json  B_memorize_fourier_control_a0p1_lam0p316228_probe_top10.json  B_probe_summary.csv  B_repr_a0p4_lam0p1_probe.json  B_repr_a0p4_lam0p1_probe_top10.json  B_repr_a0p4_lam0p1_probe_top15.json  B_repr_a0p4_lam0p1_probe_top5.json  B_weakev_comp_a0p2_lam1_probe_top10.json  C_strong_ref_a0p7_lam0p031623_probe_top10.json  algorithm_identification_report.md  cell_algorithm_scores.csv  cell_algorithm_scores.parquet  checkpoint_controls_probe_summary.csv  checkpoint_controls_probe_summary.json  comprehend_cells.csv  metadata.json  metric_summary_by_phase.csv  phase_summary.csv  top_frequency_counts.csv  (+8 more)
scripts/: identify_algorithm.py  probe_fourier_checkpoint.py  run_scan.py  run_scan_instrumented.py  train_checkpoint.py  train_one.py
tests/: smoke_test.py  test_data.py  test_instrumented.py  test_measures.py  test_model.py  test_scan.py  test_train.py
(+47 files in other folders)
