[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mqg"
version = "0.1.0"
description = "Mini-Qwen Grokking — phase diagram of emergent modular arithmetic"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1",
    "einops>=0.7",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "tqdm>=4.65",
    "pyarrow>=14",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
]
wandb = ["wandb>=0.16"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"
